--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,10 +13,11 @@
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true,
 
-    "module": "NodeNext",
+    "module": "Preserve",
     "outDir": "dist",
     "rootDir": "src",
     "sourceMap": true,
     "declaration": true
-  }
+  },
+  "exclude": ["eslint.config.mjs", "./dist/**/*", "./tests/**/*"]
 }
