--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@cybrd/employee-types",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "index.js",
   "scripts": {
-    "build": "npx rimraf ./dist && npx prettier --check . && npx tsc",
+    "build": "npx rimraf ./dist && npx prettier --check . && npx eslint src && npx tsc",
     "test": "npx vitest"
   },
   "repository": {
