--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -17,7 +17,7 @@ jobs:
       - run: npm run test
 
   publish:
-    needs: build
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       packages: write
